--- a/estilo.css
+++ b/estilo.css
@@ -44,19 +44,16 @@ a:visited{
 
 .menupresente
  {
- 	font-size: 12px;
- 	display: table;
- 	margin: auto;
- 	align-items: center;
-
+	font-size: 12px;
+	display: table;
+	margin: auto;
+	align-items: center;
 }
 
 ul {
 	align-items: center;
 	margin: 0px;
 	padding: 0px;
-
-
 }
 
 li{
@@ -65,13 +62,6 @@ li{
 	margin: 0;
 	padding: 0;
 }
-a{
-	font-family: all;
-	text-decoration: none;
-	display: block;
-	padding-right: 10px;
-	padding-left: 10px;
-}
 
 a:link{
 	color: black;
@@ -79,19 +69,31 @@ a:link{
 a:visited{
 	color:black;
 }
-
-.menusearch {
-	text-align: center;
-	height: 46px;
-	background: #DCDCDC;
-	border-style: none;
-
+a:hover{
+	color: black;
 }
-.search-container{
-  width: 490px;
-  display: block;
-  margin: 0 auto;
-  border: none;
+a:active{
+	color: black;
+}
+
+#menusearch {
+	text-align: center;
+	background-color:#d5d5d5;
+  	border:solid 0px;
+  	border-radius:5px;
+  	width:400px;
+  	height: 36px;
+}
+
+#msearch{
+	float:left;
+  background-color:transparent;
+  padding-left:5px;
+  font-style:italic;
+  font-size:14px;
+  border:none;
+  height:32px;
+  width:260px;
 }
 
 .menunovidades {
